--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "repository": "https://github.com/0xukhezo/SuperFrens-Core.git",
   "author": "<ukhezo.web3@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest --watchAll --verbose"
+  },
   "dependencies": {
     "@superfluid-finance/ethereum-contracts": "^1.5.1",
+    "@superfluid-finance/sdk-core": "^0.6.3",
     "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
     "hardhat": "^2.13.0",
-    "hardhat-deploy": "^0.11.25"
+    "hardhat-deploy": "^0.11.25",
+    "jest": "^29.5.0"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
